[gd_scene load_steps=6 format=3 uid="uid://egtfyoyohfwo"]

[ext_resource type="Script" uid="uid://bpp7nopqdt43f" path="res://Scripts/main_ui.gd" id="1_8dh63"]
[ext_resource type="PackedScene" uid="uid://1kpvkj0vkrfo" path="res://Scenes/UIs/info_ui.tscn" id="1_gmh8u"]
[ext_resource type="PackedScene" uid="uid://cdyctx1vd48db" path="res://Scenes/UIs/function_ui.tscn" id="2_kqhp1"]
[ext_resource type="Texture2D" uid="uid://uqrxtygtdsxb" path="res://Assets/UI/info.png" id="3_2qvml"]
[ext_resource type="Texture2D" uid="uid://bfm3k71o5v4tj" path="res://Assets/UI/settings_3.png" id="4_4qpny"]

[node name="MainUI" type="CanvasLayer"]
layer = 99
script = ExtResource("1_8dh63")

[node name="PanelTop" type="Panel" parent="."]
custom_minimum_size = Vector2(464, 128)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 32.0
offset_right = 20.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="InfoContainer" type="HFlowContainer" parent="PanelTop"]
custom_minimum_size = Vector2(432, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 16
alignment = 1

[node name="SampleInfo" parent="PanelTop/InfoContainer" instance=ExtResource("1_gmh8u")]
layout_mode = 2

[node name="ButtonTopLeft" type="Button" parent="."]
custom_minimum_size = Vector2(96, 96)
offset_left = 16.0
offset_top = 48.0
offset_right = 112.0
offset_bottom = 144.0
focus_mode = 0
icon = ExtResource("3_2qvml")
icon_alignment = 1
expand_icon = true

[node name="ButtonTopRight" type="Button" parent="."]
custom_minimum_size = Vector2(96, 96)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 48.0
offset_right = -16.0
offset_bottom = 144.0
grow_horizontal = 0
focus_mode = 0
icon = ExtResource("4_4qpny")
icon_alignment = 1
expand_icon = true

[node name="PanelBottom" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 96)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -96.0
grow_horizontal = 2
grow_vertical = 0

[node name="FuncContainer" type="HBoxContainer" parent="PanelBottom"]
custom_minimum_size = Vector2(0, 112)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 32
alignment = 1

[node name="SampleFunction" parent="PanelBottom/FuncContainer" instance=ExtResource("2_kqhp1")]
layout_mode = 2
size_flags_vertical = 0

[connection signal="update_info" from="." to="PanelTop/InfoContainer/SampleInfo" method="_on_update_info"]
